Update keyword-search and added range tenure SQL

--- a/scripts/keyword-search/keyword-search.ipynb
+++ b/scripts/keyword-search/keyword-search.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,10 +38,11 @@
     "]\n",
     "\n",
     "dirList = [\n",
-    "    r\"\\\\spatialfiles.bcgov\\work\\srm\\nr\\NEGSS\\NEDD\\First_Nations_Agreements\"\n",
+    "    #<place list of paths to scan here>\n",
+    "    r\"\\\\xxx.zz\\yy\\z\"\n",
     "]\n",
     "\n",
-    "output_file = r'C:\\Users\\NROSS\\OneDrive - Government of BC\\Documents\\GitHub\\gis-pantry\\scripts\\keyword-search\\search_results.txt'"
+    "output_file = r'search_results.txt'"
    ]
   },
   {
@@ -62,11 +63,11 @@
    "source": [
     "def get_shapefile_attributes(shapefile_path, layer=None):\n",
     "    \"\"\"\n",
-    "    Retrieves the field names and text attributes from a shapefile without reading the geometry.\n",
+    "    Retrieves the field names and text attributes from a shapefile/geodatabase feature class without reading the geometry.\n",
     "    \n",
     "    Parameters:\n",
     "    shapefile_path (str): The path to the shapefile or file geodatabase.\n",
-    "    layer (str): If a file geodatabase is specified, enter the feature class name. Else leave as null.\n",
+    "    layer (str): If a file geodatabase is specified, enter the feature class name. Else leave as None.\n",
     "    \n",
     "    Returns:\n",
     "    A string containing the field names and text attributes.\n",
@@ -102,12 +103,10 @@
     "            for dir_or_file in dirs + files:\n",
     "                path = os.path.join(root, dir_or_file)\n",
     "                \n",
-    "                # don't waste time searching files within geodatabases:\n",
-    "                if dir_or_file[-4:] != '.gdb':\n",
-    "                    # loop through search strings\n",
-    "                    for search_string in search_string_list:\n",
-    "                        if search_string.lower() in dir_or_file.lower():\n",
-    "                            f.write(f\"{search_string}: {path}\\n\") # write to output on success\n",
+    "                # loop through search strings\n",
+    "                for search_string in search_string_list:\n",
+    "                    if search_string.lower() in dir_or_file.lower():\n",
+    "                        f.write(f\"{search_string}: {path}\\n\") # write to output on success\n",
     "\n",
     "                # use try for this next part so that it continues on a failure\n",
     "                try:\n",
@@ -145,42 +144,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First_Nations_Agreements: searching 4 folders and 3 files\n",
-      "BRFN_Implementation_Agreement: searching 4 folders and 2 files\n",
-      "FileGeodatabase: searching 4 folders and 2 files\n",
-      "BRFNAgreement.gdb: searching 0 folders and 123 files\n",
-      "FOR_ScheduleK.gdb: searching 0 folders and 52 files\n",
-      "Pending_Permits_Schedule_O.gdb: searching 0 folders and 94 files\n",
-      "Schedule_O.gdb: searching 0 folders and 111 files\n",
-      "KML: searching 0 folders and 1 files\n",
-      "Shapefiles: searching 1 folders and 88 files\n",
-      "gundy_complex_plan_shp_11jun2024: searching 0 folders and 7 files\n",
-      "Shapefiles_NAD83CSRS: searching 0 folders and 10 files\n",
-      "Moose_Not_For_Distribution: searching 3 folders and 6 files\n",
-      "KML: searching 0 folders and 2 files\n",
-      "Moose_AOI_HEM_20201117.gdb: searching 0 folders and 82 files\n",
-      "Shapefile: searching 0 folders and 16 files\n",
-      "PeaceMoberlyTract: searching 0 folders and 7 files\n",
-      "T8: searching 6 folders and 11 files\n",
-      "Consensus.gdb: searching 0 folders and 73 files\n",
-      "Kihtsaadze_Tribal_Park: searching 2 folders and 0 files\n",
-      "Park_Boundary_No_Private: searching 0 folders and 10 files\n",
-      "Park_Boundary_Original: searching 0 folders and 6 files\n",
-      "KML: searching 0 folders and 2 files\n",
-      "Shapefiles: searching 2 folders and 5 files\n",
-      "ConsensusProtectionZones: searching 0 folders and 8 files\n",
-      "EnhancedManagement: searching 0 folders and 7 files\n",
-      "Shapefiles_NAD83CSRS: searching 1 folders and 5 files\n",
-      "ProtectionCommitments_NA83CSRS: searching 0 folders and 0 files\n",
-      "test: searching 1 folders and 1 files\n",
-      "Consensus.gdb: searching 0 folders and 71 files\n"
+      "RSEA_LEVELCD_AUG_2018.gdb: searching 0 folders and 72 files\n",
+      "RSEA_Disturbance2024Saulteau: searching 1 folders and 4 files\n",
+      "FinalResultsgdb: searching 0 folders and 0 files\n",
+      "South Peace Strategy Planning: searching 0 folders and 9 files\n",
+      "Strategic_Land_and_Resource_Plans_SLRP: searching 1 folders and 1 files\n",
+      "Sulphur_8Mile: searching 1 folders and 2 files\n",
+      "sulphur_8mile: searching 6 folders and 0 files\n",
+      "info: searching 0 folders and 71 files\n",
+      "lbnd_s8me: searching 0 folders and 18 files\n",
+      "lelk_s8me: searching 0 folders and 18 files\n",
+      "lgoat_s8me: searching 0 folders and 18 files\n",
+      "lmoose_s8me: searching 0 folders and 18 files\n",
+      "lsheep_s8me: searching 0 folders and 18 files\n",
+      "TreatiesPre1975: searching 2 folders and 7 files\n",
+      "\tSearching 1 feature classes in Traite_Post_1975_Treaty_FGDB.gdb\n",
+      "\tSearching 1 feature classes in Traite_Pre_1975_Treaty_FGDB.gdb\n",
+      "Traite_Post_1975_Treaty_FGDB.gdb: searching 0 folders and 47 files\n",
+      "Traite_Pre_1975_Treaty_FGDB.gdb: searching 0 folders and 46 files\n",
+      "TSR: searching 1 folders and 0 files\n",
+      "FortNelson: searching 0 folders and 15 files\n",
+      "Wildfire: searching 1 folders and 1 files\n",
+      "DonnieCreek: searching 2 folders and 7 files\n",
+      "\tSearching 2 feature classes in provincial_burn_severity_interim.gdb\n",
+      "G90273: searching 1 folders and 12 files\n",
+      "\tSearching 2 feature classes in provincial_burn_severity_interim.gdb\n",
+      "provincial_burn_severity_interim.gdb: searching 0 folders and 53 files\n",
+      "provincial_burn_severity_interim.gdb: searching 0 folders and 53 files\n",
+      "WRR_Frontera_draft: searching 0 folders and 16 files\n"
      ]
     }
    ],
